--- a/fight_club/fight_club.vcxproj
+++ b/fight_club/fight_club.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="Ability.h" />
     <ClInclude Include="Character.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
